fix: correct list-style property and update footer margin in 19-style.css

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -169,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
 ul.row {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .col-1-3 {
@@ -185,7 +185,7 @@ ul.row {
 }
 
 .footer_copyrigth {
-    margin: none;
+    margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color)
 }
