fix: correct typo in footer class name and adjust social link styles

--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -211,14 +211,11 @@ ul.row {
     background-color: var(--color-black);
 }
 
-.footer-adress {
+.footer-address {
     color: var(--text-color);
 }
 
-.social-link {
-    display: block;
-}
-
 .social-link svg {
+    display: block;
     fill: var(--text-color);
 }
