--- a/CSS_advanced/styles/24-style.css
+++ b/CSS_advanced/styles/24-style.css
@@ -95,13 +95,13 @@ a:active {
     margin: 0;
  }
 
- .card-services .a {
+ .card-services a {
     padding: 2rem;
     display: block;
     background-color: var(--color-light-grey);
  }
 
- .card-services .a:hover {
+ .card-services a:hover {
     color: var(--color-white);
     background-color: var(--color-primary);
     text-decoration: none;
