--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -97,7 +97,7 @@ a:active {
     padding: var(--button-padding);
     border: var(--button-border);
     font-size: var(--button-font-size);
-    color: var(--border-color);
+    color: var(--button-color);
     text-decoration: var(--button-text-decoration);
     
 }
