--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -142,7 +142,7 @@ a:active {
     height: 10rem;
 }
 
-.card-testimonial .card-title cite {
+.card-testimonial .card-quote cite {
     display: block;
     padding: 1rem 0;
     color: var(--color-primary);
