--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -169,7 +169,7 @@ a:active {
     color: var(--color-primary);
 }
 
-.card-outer {
+ .card-work .card-outer {
     position: relative;
     overflow: hidden;
 }
@@ -208,15 +208,15 @@ a:active {
 }
 
 .card-work .card-title a::after {
-    content: "";
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
+    content: "";
 } 
 
-.card-work a:hover .card-title {
+.card-work:hover .card-title {
     opacity: 1;
 }
 
