--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -204,9 +204,9 @@ a:active {
     vertical-align: bottom;
 }
 
-.card-work:hover .card-image img {
+.card-work:hover .card-image {
     transform: scale(1.2);
-    transition-duration: var(--transition-duration) var(--transition-cubic-bezier)
+    transition: var(--transition-duration) var(--transition-cubic-bezier)
 }
 
 .card-work .card-inner {
@@ -215,7 +215,7 @@ a:active {
     left: -0.1rem;
     right: -0.1rem;
     z-index: 1;
-    transition-duration: var(--transition-duration) var(--transition-cubic-bezier)
+    transition: var(--transition-duration) var(--transition-cubic-bezier)
 }
 
 .card-work:hover .card-inner {
